--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "express": "^4.18.1",
     "http-proxy-middleware": "^2.0.6",
+    "ip": "^2.0.1",
+    "kafkajs": "^1.16.0",
     "path": "^0.12.7"
   }
 }
